<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_layout"
    tools:context=".Login">

        <TextView
            android:id="@+id/loginTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please enter user info"
            android:textSize="17sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            />

    <EditText
        android:id="@+id/enterEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="52dp"
        android:ems="15"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/enterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="102dp"
        android:ems="15"
        android:hint="Password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="TextFields" />

    <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LOGIN"
            android:onClick="attemptLogin"
            android:height="60dp"
            android:layout_marginTop="182dp"
            android:layout_marginStart="20dp"
            />

    <TextView
        android:id="@+id/registerLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="199dp"
        android:onClick="toRegister"
        android:text="Click here to register."
        android:textSize="17sp" />


</FrameLayout>