<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/timeView"
        android:layout_width="122dp"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:text="TIME" />

    <TextView
        android:id="@+id/seatsAvailView"
        android:layout_width="122dp"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:text="# AVAILABLE" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="55dp"
        android:layout_marginStart="5dp"
        android:text="ADD"
        android:onClick="addToCart"/>

    <Button
        android:id="@+id/removeButton"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="55dp"
        android:layout_marginStart="5dp"
        android:text="REMOVE"
        android:onClick="removeFromCart"/>
</FrameLayout>