<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/buildingImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/buildingName"
        android:layout_width="122dp"
        android:layout_height="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:text="BUILDING NAME" />

    <TextView
        android:id="@+id/dateTime"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_weight="1"
        android:layout_marginTop="30dp"
        android:layout_marginStart="100dp"
        android:text="DATE TIME" />

    <TextView
        android:id="@+id/status"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginStart="225dp"
        android:text="STATUS " />

    <Button
        android:id="@+id/modifyButton"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="55dp"
        android:layout_marginStart="100dp"
        android:text="MODIFY"
        android:onClick="modifyActiveReservation"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="55dp"
        android:layout_marginStart="210dp"
        android:text="CANCEL"
        android:onClick="cancelActiveReservation"/>
</FrameLayout>