<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Booking">

    <TextView
        android:id="@+id/displayBuildingName"
        android:layout_width="190dp"
        android:layout_height="36dp"
        android:layout_marginStart="190dp"
        android:layout_marginTop="10dp"
        android:text="FILLER LIBRARY"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/displayDescription"
        android:layout_width="190dp"
        android:layout_height="36dp"
        android:layout_marginStart="190dp"
        android:layout_marginTop="55dp"
        android:text="FILLER"
        android:textSize="12sp" />

    <Spinner
        android:id="@+id/selectWeekday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:entries="@array/weekdays"
        android:spinnerMode="dropdown" />

    <ListView
        android:id="@+id/intervalListView"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/intervalTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="200dp"
        android:text="Select timeslots below."/>

    <Button
        android:id="@+id/bookButton"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="500dp"
        android:layout_marginStart="20dp"
        android:text="BOOK RESERVATION"/>

    <ImageView
        android:id="@+id/buildingImageView"
        android:layout_width="155dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        tools:src="@tools:sample/backgrounds/scenic"
        />

</FrameLayout>
